--- a/assets/assets/translations/fr.json
+++ b/assets/assets/translations/fr.json
@@ -7,45 +7,50 @@
             "tooltip": "Github",
             "url": "https://github.com/AladdineDev",
             "icon": {
-                "iconCodePoint": "0xefb7",
-                "iconFontFamily": "FontAwesome",
-                "iconFontPackage": "icons_plus"
+                "codePoint": "0xefb7",
+                "fontFamily": "FontAwesome",
+                "fontPackage": "icons_plus",
+                "color": "0xffffffff"
             }
         },
         {
             "tooltip": "Twitter",
             "url": "https://twitter.com/AladdineDev",
             "icon": {
-                "iconCodePoint": "0xf0ea",
-                "iconFontFamily": "FontAwesome",
-                "iconFontPackage": "icons_plus"
+                "codePoint": "0xf0ea",
+                "fontFamily": "FontAwesome",
+                "fontPackage": "icons_plus",
+                "color": "0xffffffff"
             }
         },
         {
             "tooltip": "LinkedIn",
             "url": "https://www.linkedin.com/in/aladdine-dev",
             "icon": {
-                "iconCodePoint": "0xeffb",
-                "iconFontFamily": "FontAwesome",
-                "iconFontPackage": "icons_plus"
+                "codePoint": "0xeffb",
+                "fontFamily": "FontAwesome",
+                "fontPackage": "icons_plus",
+                "color": "0xffffffff"
             }
         },
         {
             "tooltip": "aladdine.abdou@gmail.com",
             "url": "mailto:aladdine.abdou@gmail.com",
             "icon": {
-                "iconCodePoint": "0xeaad",
-                "iconFontFamily": "FontAwesome",
-                "iconFontPackage": "icons_plus"
+                "codePoint": "0xeaad",
+                "fontFamily": "FontAwesome",
+                "fontPackage": "icons_plus",
+                "color": "0xffffffff"
             }
         },
         {
             "tooltip": "+33 7 82 54 34 70",
             "url": "tel:+33782543470",
             "icon": {
-                "iconCodePoint": "0xecbb",
-                "iconFontFamily": "FontAwesome",
-                "iconFontPackage": "icons_plus"
+                "codePoint": "0xecbb",
+                "fontFamily": "FontAwesome",
+                "fontPackage": "icons_plus",
+                "color": "0xffffffff"
             }
         }
     ],
@@ -62,20 +67,72 @@
     "aboutDescription": "Salut ! Je m'appelle Aladdine, et je suis apprenti développeur en quatrième année de Mobilité et Objets Connectés à l'ESGI Paris. Passionné par l'écosystème mobile, je combine mes études et mon expérience professionnelle pour créer des applications intuitives et riches en fonctionnalités.\nJ'aspire à mettre mes compétences au service de projets inspirants et challengeant.",
     "experiences": [
         {
-            "job": "Développeur Mobile",
+            "role": "Développeur Mobile",
             "company": "Walt Disney Imagineering",
             "description": "Développement d'une application mobile offline-first de levée des réserves pour Disneyland Paris, facilitant aux experts techniques la prise d'informations sur le terrain et fluidifiant la communication avec les services de maintenance pour la résolution des problèmes.",
             "isPresent": false,
             "startYear": 2022,
             "endYear": 2023,
             "technologies": [
-                "Flutter",
-                "Dart",
-                "Django",
-                "Python",
-                "PostgreSQL",
-                "SQLite",
-                "Docker"
+                {
+                    "name": "Flutter",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/flutter.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Dart",
+                    "icon": {
+                        "assetName": "assets/images/logos/other/dart.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Django",
+                    "icon": {
+                        "codePoint": "0xeee7",
+                        "fontFamily": "BoxIcons",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Python",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/python.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "PostgreSQL",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/postgresql.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "SQLite",
+                    "icon": {
+                        "codePoint": "0xe944",
+                        "fontFamily": "OctIcons",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Docker",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/docker.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "AWS",
+                    "icon": {
+                        "codePoint": "0xeed1",
+                        "fontFamily": "BoxIcons",
+                        "fontPackage": "icons_plus"
+                    }
+                }
             ],
             "links": [
                 {
@@ -85,7 +142,7 @@
             ]
         },
         {
-            "job": "Développeur Mobile",
+            "role": "Développeur Mobile",
             "company": "Solutions Multi Techniques",
             "description": "Développement d'une Progressive Web App pour les techniciens en systèmes de sécurité, leur permettant de générer des devis PDF complets. Cela permet la remise immédiate des devis aux clients après leur visite, augmentant ainsi le taux de conversion.",
             "startYear": 2022,
@@ -93,13 +150,31 @@
             "endYear": 2022,
             "endMonth": 2,
             "technologies": [
-                "Flutter",
-                "Dart",
-                "Firebase"
+                {
+                    "name": "Flutter",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/flutter.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Dart",
+                    "icon": {
+                        "assetName": "assets/images/logos/other/dart.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Firebase",
+                    "icon": {
+                        "assetName": "assets/images/logos/other/firebase.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                }
             ]
         },
         {
-            "job": "Développeur Web",
+            "role": "Développeur Web",
             "company": "Association FAIRE",
             "description": "Développement du site web de l'association, en collaboration au sein d'un groupe de développeurs. Ce site web offre à ses visiteurs la possibilité d'en savoir plus sur l'association et de la rejoindre en tant que membres.\nÀ ce jour, le site web a attiré plus de 10 000 visites.",
             "startYear": 2021,
@@ -107,12 +182,42 @@
             "endYear": 2021,
             "endMonth": 6,
             "technologies": [
-                "HTML",
-                "CSS",
-                "Javascript",
-                "PHP",
-                "MariaDB",
-                "Apache"
+                {
+                    "name": "HTML",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/html-5.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "CSS",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/css3.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Javascript",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/javascript.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "PHP",
+                    "icon": {
+                        "codePoint": "0xef29",
+                        "fontFamily": "BoxIcons",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "MariaDB",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/mariadb.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                }
             ],
             "links": [
                 {
@@ -129,14 +234,27 @@
             "description": "Ce projet open source permet à toute personne de disposer d’un portfolio en ligne en moins de 10 minutes. Il adopte une architecture basée sur Riverpod en suivant une approche feature-first pour sa structure. Il est entièrement responsive, et prend en charge plusieurs thèmes ainsi que plusieurs langues.",
             "url": "https://github.com/AladdineDev/portfolio#readme",
             "icon": {
-                "iconCodePoint": "0xefb7",
-                "iconFontFamily": "FontAwesome",
-                "iconFontPackage": "icons_plus"
+                "codePoint": "0xefb7",
+                "fontFamily": "FontAwesome",
+                "fontPackage": "icons_plus",
+                "color": "0xffffffff"
             },
             "screenshotPath": "assets/images/portfolio.png",
             "technologies": [
-                "Flutter",
-                "Dart"
+                {
+                    "name": "Flutter",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/flutter.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Dart",
+                    "icon": {
+                        "assetName": "assets/images/logos/other/dart.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                }
             ],
             "links": [
                 {
@@ -150,17 +268,49 @@
             "description": "Learn Flow est un projet de groupe visant à créer une solution de mise en relation d'élèves et d'enseignants. Cette API REST sert d'interface pour les différents clients du projet (Android, iOS et Web). Elle offre notamment des fonctionnalités d'authentification avec JWT.",
             "url": "https://github.com/AladdineDev/learnflow-api#readme",
             "icon": {
-                "iconCodePoint": "0xefb7",
-                "iconFontFamily": "FontAwesome",
-                "iconFontPackage": "icons_plus"
+                "codePoint": "0xefb7",
+                "fontFamily": "FontAwesome",
+                "fontPackage": "icons_plus",
+                "color": "0xffffffff"
             },
             "screenshotPath": "assets/images/learnflow-api.png",
             "technologies": [
-                "Node.js",
-                "Express",
-                "TypeScript",
-                "MongoDB",
-                "Docker"
+                {
+                    "name": "Node.js",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/nodejs.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Express",
+                    "icon": {
+                        "assetName": "assets/images/logos/other/express-js.svg",
+                        "fontPackage": "icons_plus",
+                        "color": "0xffffffff"
+                    }
+                },
+                {
+                    "name": "TypeScript",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/typescript.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "MongoDB",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/mongodb.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Docker",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/docker.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                }
             ]
         },
         {
@@ -168,14 +318,27 @@
             "description": "Il s'agit du back-office conçu pour les managers du projet Learn Flow. Cette Single-Page App leur permet de surveiller l'activité de leurs applications et utilisateurs (trafic, factures...).",
             "url": "https://github.com/AladdineDev/learnflow_backoffice#readme",
             "icon": {
-                "iconCodePoint": "0xefb7",
-                "iconFontFamily": "FontAwesome",
-                "iconFontPackage": "icons_plus"
+                "codePoint": "0xefb7",
+                "fontFamily": "FontAwesome",
+                "fontPackage": "icons_plus",
+                "color": "0xffffffff"
             },
             "screenshotPath": "assets/images/learnflow-backoffice.png",
             "technologies": [
-                "Flutter",
-                "Dart"
+                {
+                    "name": "Flutter",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/flutter.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Dart",
+                    "icon": {
+                        "assetName": "assets/images/logos/other/dart.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                }
             ]
         },
         {
@@ -183,18 +346,50 @@
             "description": "GSB-Frais est une application web de gestion des frais, développée pour les délégués médicaux et les comptables de l'entreprise fictive GSB. Elle facilite la saisie et la vérification des rapports mensuels des délégués médicaux, tout en permettant aux comptables de les traiter.",
             "url": "https://github.com/AladdineDev/GSB-Frais#readme",
             "icon": {
-                "iconCodePoint": "0xefb7",
-                "iconFontFamily": "FontAwesome",
-                "iconFontPackage": "icons_plus"
+                "codePoint": "0xefb7",
+                "fontFamily": "FontAwesome",
+                "fontPackage": "icons_plus",
+                "color": "0xffffffff"
             },
             "screenshotPath": "assets/images/gsb-frais.png",
             "technologies": [
-                "Symfony",
-                "PHP",
-                "Bootstrap",
-                "MariaDB",
-                "Apache",
-                "Docker"
+                {
+                    "name": "Symfony",
+                    "icon": {
+                        "codePoint": "0xf0ab",
+                        "fontFamily": "FontAwesome",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "PHP",
+                    "icon": {
+                        "codePoint": "0xef29",
+                        "fontFamily": "BoxIcons",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Bootstrap",
+                    "icon": {
+                        "assetName": "assets/images/logos/other/bootstrap.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "MariaDB",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/mariadb.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Docker",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/docker.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                }
             ]
         },
         {
@@ -202,16 +397,42 @@
             "description": "L'API REST du projet GSB sert d'interface pour les différents clients du projet (Android, Desktop et Web).",
             "url": "https://github.com/AladdineDev/GSB-RV-Visiteur-Serveur#readme",
             "icon": {
-                "iconCodePoint": "0xefb7",
-                "iconFontFamily": "FontAwesome",
-                "iconFontPackage": "icons_plus"
+                "codePoint": "0xefb7",
+                "fontFamily": "FontAwesome",
+                "fontPackage": "icons_plus",
+                "color": "0xffffffff"
             },
             "screenshotPath": "assets/images/gsb-rv-visiteur-serveur.png",
             "technologies": [
-                "Flask",
-                "Python",
-                "MariaDB",
-                "Docker"
+                {
+                    "name": "Flask",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/flask.svg",
+                        "fontPackage": "icons_plus",
+                        "color": "0xffffffff"
+                    }
+                },
+                {
+                    "name": "Python",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/python.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "MariaDB",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/mariadb.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                },
+                {
+                    "name": "Docker",
+                    "icon": {
+                        "assetName": "assets/images/logos/software-development/docker.svg",
+                        "fontPackage": "icons_plus"
+                    }
+                }
             ]
         }
     ],
